[gd_scene load_steps=8 format=3 uid="uid://d0dbuca6xjv3b"]

[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Main_Scene.gd" id="1_5f268"]
[ext_resource type="Texture2D" uid="uid://bssghjqkpvhhi" path="res://Assets/Images/2.jpg" id="2_p5ilu"]
[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Main_Scene/Main_Menu.gd" id="3_s5nvw"]
[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Main_Scene/Player_Menu.gd" id="4_e83j3"]
[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Main_Scene/Difficulty_Menu.gd" id="5_i24b0"]
[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Main_Scene/Stage_Menu.gd" id="6_x5vwy"]
[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Main_Scene/Start_Menu.gd" id="7_jwsoe"]

[node name="Main_Scene" type="Control" node_paths=PackedStringArray("mainMenu", "difficultyMenu", "playerMenu", "stageMenu", "startMenu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5f268")
mainMenu = NodePath("MarginContainer/Main_Menu")
difficultyMenu = NodePath("MarginContainer/Difficulty_Menu")
playerMenu = NodePath("MarginContainer/Player_Menu")
stageMenu = NodePath("MarginContainer/Stage_Menu")
startMenu = NodePath("MarginContainer/Start_Menu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_p5ilu")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 50
text = "Player 1
Easy
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main_Menu" type="Control" parent="MarginContainer" node_paths=PackedStringArray("mainScene", "button", "gameInfo")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("3_s5nvw")
mainScene = NodePath("../..")
button = [NodePath("PanelContainer/MarginContainer/VBoxContainer/Button"), NodePath("PanelContainer/MarginContainer/VBoxContainer/Button2"), NodePath("PanelContainer/MarginContainer/VBoxContainer/Button3"), NodePath("PanelContainer/MarginContainer/VBoxContainer/Button4"), NodePath("PanelContainer/MarginContainer/VBoxContainer/Button5")]
gameInfo = NodePath("../Label")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Main_Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -210.5
offset_right = 276.0
offset_bottom = 210.5
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Main_Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Main_Menu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/Main_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Button2" type="Button" parent="MarginContainer/Main_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Player"

[node name="Button3" type="Button" parent="MarginContainer/Main_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Difficulty"

[node name="Button4" type="Button" parent="MarginContainer/Main_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Button5" type="Button" parent="MarginContainer/Main_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Go to Title"

[node name="Player_Menu" type="Control" parent="MarginContainer" node_paths=PackedStringArray("mainScene", "button", "back")]
visible = false
layout_mode = 2
script = ExtResource("4_e83j3")
mainScene = NodePath("../..")
button = [NodePath("VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Button"), NodePath("VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/Button2")]
back = NodePath("VBoxContainer/Button")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Player_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -275.5
offset_right = 512.0
offset_bottom = 275.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Player_Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Player_Menu/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Player_Menu/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/Player_Menu/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 450)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Player 1"

[node name="Button2" type="Button" parent="MarginContainer/Player_Menu/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 450)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Player 2"

[node name="Button" type="Button" parent="MarginContainer/Player_Menu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Difficulty_Menu" type="Control" parent="MarginContainer" node_paths=PackedStringArray("mainScene", "button", "back")]
visible = false
layout_mode = 2
script = ExtResource("5_i24b0")
mainScene = NodePath("../..")
button = [NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button3"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button4")]
back = NodePath("VBoxContainer/Button")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Difficulty_Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -256.5
offset_right = 210.0
offset_bottom = 256.5
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Difficulty_Menu/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Difficulty_Menu/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Difficulty_Menu/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/Difficulty_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Easy"

[node name="Button2" type="Button" parent="MarginContainer/Difficulty_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="Button3" type="Button" parent="MarginContainer/Difficulty_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Hard"

[node name="Button4" type="Button" parent="MarginContainer/Difficulty_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Lunatic"

[node name="Button" type="Button" parent="MarginContainer/Difficulty_Menu/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="Stage_Menu" type="Control" parent="MarginContainer" node_paths=PackedStringArray("mainScene", "button", "back")]
visible = false
layout_mode = 2
script = ExtResource("6_x5vwy")
mainScene = NodePath("../..")
button = [NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button3"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button4"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button5"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button6"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button7"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button8"), NodePath("VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button9")]
back = NodePath("VBoxContainer/Button")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Stage_Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -303.0
offset_right = 320.0
offset_bottom = 303.0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Stage_Menu/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage 1"

[node name="Button2" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage 2"

[node name="Button3" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage 3"

[node name="Button4" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage 4"

[node name="Button5" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage 5"

[node name="Button6" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage Final"

[node name="Button7" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Stage Extra"

[node name="Button8" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Rogue-Like Mode"

[node name="Button9" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Boss-Rush Mode"

[node name="Button" type="Button" parent="MarginContainer/Stage_Menu/VBoxContainer"]
custom_minimum_size = Vector2(300, 55)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="Start_Menu" type="Control" parent="MarginContainer" node_paths=PackedStringArray("mainScene", "start", "back")]
visible = false
layout_mode = 2
script = ExtResource("7_jwsoe")
mainScene = NodePath("../..")
start = NodePath("PanelContainer/MarginContainer/VBoxContainer/Button")
back = NodePath("PanelContainer/MarginContainer/VBoxContainer/Button3")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Start_Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -178.0
offset_right = 249.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Start_Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Start_Menu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/Start_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="Button2" type="Button" parent="MarginContainer/Start_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Info"

[node name="Button3" type="Button" parent="MarginContainer/Start_Menu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back"
